<?xml version="1.0"?>
<package>
  <name>motor_ros</name>
  <version>1.0.0</version>
  <description>The motor ros package, support Adafruit DC Motor + Stepper FeatherWing</description>

  <maintainer email="8082209@qq.com">Peng-YongSheng</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
